--- a/app/src/main/res/layout/activity_all_events.xml
+++ b/app/src/main/res/layout/activity_all_events.xml
@@ -6,10 +6,24 @@
     tools:context="com.elena.app.All_events"
     tools:ignore="MergeRootFrame" >
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/list" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <AutoCompleteTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New AutoCompleteTextView"
+            android:id="@+id/autoCompleteTextView"
+            android:layout_gravity="center_horizontal|top" />
+
+        <ListView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView" />
+
+    </LinearLayout>
 
 
 </FrameLayout>
