--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -1,10 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.elena.app.All_events"
-    tools:ignore="MergeRootFrame" >
+    tools:context="com.tabexample.app.EventListFragment">
 
     <LinearLayout
         android:orientation="vertical"
@@ -17,6 +15,5 @@
             android:id="@+id/listView" />
 
     </LinearLayout>
-
 
 </FrameLayout>
