--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:background="#ffe9faff">
 
         <ListView
             android:layout_width="fill_parent"
