--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
     </style>
     <style name="AppTheme2" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:windowBackground">@drawable/gnammo_fb</item>
+        <item name="android:windowBackground">@drawable/splash_screen</item>
         <!-- Customize your theme here. -->
     </style>
 
