--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -77,4 +77,11 @@
         android:text=""
         android:id="@+id/textView4"
         android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Paypal not working yet"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
